# infrasyntax

./: README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py  security.py
backend/app/parser/docker/backend/grammar/: dk.interp  dk.tokens  dkLexer.interp  dkLexer.py  dkListener.py  dkParser.py
backend/app/parser/nginx/backend/grammar/: NginxLexer.interp  NginxLexer.py  NginxLexer.tokens  nginx.interp  nginxListener.py  nginxParser.py
backend/app/parser/terraform/backend/grammar/: Terraform.interp  TerraformLexer.interp  TerraformLexer.py  TerraformLexer.tokens  TerraformListener.py  TerraformParser.py
backend/grammar/: Terraform.g4  dk.g4  nginx.g4
backend/scripts/: evaluate_models.py  extractor_ansible.py  extractor_docker.py  extractor_github.py  extractor_nginx.py  extractor_terraform.py  extractor_yaml.py  graph_builder.py  indexer.py  scraper.py  unify_snippets.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.jsx
infrasyntax/: README.md  docker-compose.yml
infrasyntax/backend/: Dockerfile  requirements.txt
infrasyntax/backend/app/: main.py
infrasyntax/backend/app/api/: search.py
infrasyntax/backend/app/core/: config.py  model.py
infrasyntax/backend/app/services/: search_service.py
infrasyntax/frontend/: package.json
infrasyntax/frontend/src/: App.css  App.jsx  index.css
infrasyntax/parser/: indexer.py  requirements.txt  run_parser.py  segmenter.py
infrasyntax/scraper/: requirements.txt  run_scraper.py
infrasyntax/shared/: logger.py
(+2 files in other folders)
